Agero_CloudPod_cf_v12.template
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "Build Cloud Pod", 
    "Parameters": {
        "0VpcId": {
            "Type": "String",
            "Description": "VPC Id",
            "Default": "vpc-60d61305"
        },
        "01Podname": {
            "Type": "String",
            "Default": "a15",
            "Description": "Name the pod"
        },
        "1SubnetNumber": {
            "Type": "Number",
            "MinValue": "0",
            "MaxValue": "255",
            "Description": "3rd Octet of Subnet for Network of the Pod, if you enter 103 then the POD will be a 10.201.103.0/24 network",
            "Default": "10"
        },
        "2MakeLBForA00": {
            "Default": "0",
            "Description": "Create the LB for A00 Server (0 = No, 1 = Yes)",
            "Type": "Number",
            "MinValue": "0",
            "MaxValue": "1"
        },
        "3MakeLBForA01": {
            "Default": "0",
            "Description": "Create the LB for A01 Server (0 = No, 1 = Yes)",
            "Type": "Number",
            "MinValue": "0",
            "MaxValue": "1"
        },
        "4MakeLBForB": {
            "Default": "0",
            "Description": "Create the LB for B Server (0 = No, 1 = Yes)",
            "Type": "Number",
            "MinValue": "0",
            "MaxValue": "1"
        }
    },
    "Conditions": {
        "CreateLB1": {
            "Fn::Equals": [
                {
                    "Ref": "2MakeLBForA00"
                },
                "1"
            ]
        },
        "CreateLB2": {
            "Fn::Equals": [
                {
                    "Ref": "3MakeLBForA01"
                },
                "1"
            ]
        },
        "CreateLB3": {
            "Fn::Equals": [
                {
                    "Ref": "4MakeLBForB"
                },
                "1"
            ]
        }
    },
 "Resources": {
        "EC2Subnet": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "0VpcId"
                },
                "CidrBlock": {
                    "Fn::Join": [
                        "",
                        [
                            "10.201.",
                            {
                                "Ref": "1SubnetNumber"
                            },
                            ".1/26"
                        ]
                    ]
                },
                "AvailabilityZone": {
                    "Fn::Select": [
                        "0",
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                },
                "Tags": [
                    {
                        "Key": "Application",
                        "Value": {
                            "Ref": "AWS::StackName"
                        }
                    }
                ]
            }
        },
        "RDS1Subnet": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "0VpcId"
                },
                "CidrBlock": {
                    "Fn::Join": [
                        "",
                        [
                            "10.201.",
                            {
                                "Ref": "1SubnetNumber"
                            },
                            ".64/28"
                        ]
                    ]
                },
                "AvailabilityZone": {
                    "Fn::Select": [
                        "0",
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                },
                "Tags": [
                    {
                        "Key": "Application",
                        "Value": {
                            "Ref": "AWS::StackName"
                        }
                    }
                ]
            }
        },
        "RDS2Subnet": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "0VpcId"
                },
                "CidrBlock": {
                    "Fn::Join": [
                        "",
                        [
                            "10.201.",
                            {
                                "Ref": "1SubnetNumber"
                            },
                            ".80/28"
                        ]
                    ]
                },
                "AvailabilityZone": {
                    "Fn::Select": [
                        "2",
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                },
                "Tags": [
                    {
                        "Key": "Application",
                        "Value": {
                            "Ref": "AWS::StackName"
                        }
                    }
                ]
            }
        },
        "S1RouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "DeletionPolicy": "Delete",
            "Properties": {
                "SubnetId": {
                    "Ref": "EC2Subnet"
                },
                "RouteTableId": "rtb-cbe41dae"
            }
        },
        "S2RouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "DeletionPolicy": "Delete",
            "Properties": {
                "SubnetId": {
                    "Ref": "RDS1Subnet"
                },
                "RouteTableId": "rtb-cbe41dae"
            }
        },
        "S3RouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "DeletionPolicy": "Delete",
            "Properties": {
                "SubnetId": {
                    "Ref": "RDS2Subnet"
                },
                "RouteTableId": "rtb-cbe41dae"
            }
        },
        "RDSGroup1": {
            "Type": "AWS::RDS::DBSubnetGroup",
            "Properties": {
                "DBSubnetGroupDescription": {
                    "Fn::Join": [
                        "",
                        [
                            "RDS Group 1 in ",
                            {
                                "Ref": "AWS::StackName"
                            }
                        ]
                    ]
                },
                "SubnetIds": [
                    {
                        "Ref": "RDS1Subnet"
                    },
                    {
                        "Ref": "RDS2Subnet"
                    }
                ],
                "Tags": [
                    {
                        "Key": "Application",
                        "Value": {
                            "Ref": "AWS::StackName"
                        }
                    }
                ]
            }
        },
            "RDSGroup2": {
                "Type": "AWS::RDS::DBSubnetGroup",
                "Properties": {
                    "DBSubnetGroupDescription": {
                        "Fn::Join": [
                            "",
                            [
                                "RDS Group 2 in ",
                                {
                                    "Ref": "AWS::StackName"
                                }
                            ]
                        ]
                    },
                    "SubnetIds": [
                        {
                            "Ref": "RDS2Subnet"
                        },
                        {
                            "Ref": "RDS1Subnet"
                        }
                    ],
                    "Tags": [
                        {
                            "Key": "Application",
                            "Value": {
                                "Ref": "AWS::StackName"
                            }
                        }
                    ]
                }
            },
        "myNetworkAcl": {
            "Type": "AWS::EC2::NetworkAcl",
            "Properties": {
                "VpcId": {
                    "Ref": "0VpcId"
                },
                "Tags": [
                    {
                        "Key": "Application",
                        "Value": {
                            "Ref": "AWS::StackName"
                        }
                    }
                ]
            }
        },
        "myNetworkAclEgressEntry": {
            "Type": "AWS::EC2::NetworkAclEntry",
            "Properties": {
                "NetworkAclId": {
                    "Ref": "myNetworkAcl"
                },
                "RuleNumber": "100",
                "Protocol": "-1",
                "RuleAction": "allow",
                "Egress": "true",
                "CidrBlock": "10.0.0.0/8"
            }
        },
        "myNetworkAclEgressEntry2": {
            "Type": "AWS::EC2::NetworkAclEntry",
            "Properties": {
                "NetworkAclId": {
                    "Ref": "myNetworkAcl"
                },
                "RuleNumber": "101",
                "Protocol": "-1",
                "RuleAction": "allow",
                "Egress": "true",
                "CidrBlock": "192.168.0.0/16"
            }
        },
        "myNetworkAclIngressEntry": {
            "Type": "AWS::EC2::NetworkAclEntry",
            "Properties": {
                "NetworkAclId": {
                    "Ref": "myNetworkAcl"
                },
                "RuleNumber": "100",
                "Protocol": "-1",
                "RuleAction": "allow",
                "Egress": "false",
                "CidrBlock": "10.0.0.0/8"
            }
        },
        "myNetworkAclIngressEntry2": {
            "Type": "AWS::EC2::NetworkAclEntry",
            "Properties": {
                "NetworkAclId": {
                    "Ref": "myNetworkAcl"
                },
                "RuleNumber": "101",
                "Protocol": "-1",
                "RuleAction": "allow",
                "Egress": "false",
                "CidrBlock": "192.168.0.0/16"
            }
        },
        "EC2SubnetNetworkAclAssociation": {
            "Type": "AWS::EC2::SubnetNetworkAclAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "EC2Subnet"
                },
                "NetworkAclId": {
                    "Ref": "myNetworkAcl"
                }
            }
        },
        "RDS1SubnetNetworkAclAssociation": {
            "Type": "AWS::EC2::SubnetNetworkAclAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "RDS1Subnet"
                },
                "NetworkAclId": {
                    "Ref": "myNetworkAcl"
                }
            }
        },
        "RDS2SubnetNetworkAclAssociation": {
            "Type": "AWS::EC2::SubnetNetworkAclAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "RDS2Subnet"
                },
                "NetworkAclId": {
                    "Ref": "myNetworkAcl"
                }
            }
        },
        "DbSecurityByEC2SecurityGroup": {
            "Type": "AWS::RDS::DBSecurityGroup",
            "Properties": {
                "EC2VpcId": {
                    "Ref": "0VpcId"
                },
                "DBSecurityGroupIngress": {
                    "EC2SecurityGroupId": {
                        "Ref": "OracleSecurityGroup"
                    }
                },
                "GroupDescription": {
                    "Fn::Join": [
                        "",
                        [
                            "RDS Security Group Oracle 1 in ",
                            {
                                "Ref": "AWS::StackName"
                            }
                        ]
                    ]
                },
                "Tags": [
                    {
                        "Key": "Application",
                        "Value": {
                            "Ref": "AWS::StackName"
                        }
                    }
                ]
            }
        },
        "OracleSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "VpcId": {
                    "Ref": "0VpcId"
                },
                "GroupDescription": {
                    "Fn::Join": [
                        "",
                        [
                            "RDS Security Group Oracle in ",
                            {
                                "Ref": "AWS::StackName"
                            }
                        ]
                    ]
                },
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "1521",
                        "ToPort": "1521",
                        "CidrIp": {
                            "Fn::Join": [
                                "",
                                [
                                    "10.201.",
                                    {
                                        "Ref": "1SubnetNumber"
                                    },
                                    ".0/24"
                                ]
                            ]
                        }
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "1521",
                        "ToPort": "1521",
                        "CidrIp": "10.0.0.0/8"
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "1521",
                        "ToPort": "1521",
                        "CidrIp": "192.168.0.0/16"
                    }
                ],
                "Tags": [
                    {
                        "Key": "Application",
                        "Value": {
                            "Ref": "AWS::StackName"
                        }
                    }
                ]
            }
        },
        "DbSecurity2ByEC2SecurityGroup": {
            "Type": "AWS::RDS::DBSecurityGroup",
            "Properties": {
                "EC2VpcId": {
                    "Ref": "0VpcId"
                },
                "DBSecurityGroupIngress": {
                    "EC2SecurityGroupId": {
                        "Ref": "OracleSecurityGroup2"
                    }
                },
                "GroupDescription": {
                    "Fn::Join": [
                        "",
                        [
                            "RDS Security Group Oracle State Farm in ",
                            {
                                "Ref": "AWS::StackName"
                            }
                        ]
                    ]
                },
                "Tags": [
                    {
                        "Key": "Application",
                        "Value": {
                            "Ref": "AWS::StackName"
                        }
                    }
                ]
            }
        },
        "OracleSecurityGroup2": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "VpcId": {
                    "Ref": "0VpcId"
                },
                "GroupDescription": {
                    "Fn::Join": [
                        "",
                        [
                            "RDS Security Group Oracle State Farm in ",
                            {
                                "Ref": "AWS::StackName"
                            }
                        ]
                    ]
                },
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "1521",
                        "ToPort": "1521",
                        "CidrIp": {
                            "Fn::Join": [
                                "",
                                [
                                    "10.201.",
                                    {
                                        "Ref": "1SubnetNumber"
                                    },
                                    ".0/24"
                                ]
                            ]
                        }
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "1521",
                        "ToPort": "1521",
                        "CidrIp": "10.0.0.0/8"
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "1521",
                        "ToPort": "1521",
                        "CidrIp": "192.168.0.0/16"
                    }
                ],
                "Tags": [
                    {
                        "Key": "Application",
                        "Value": {
                            "Ref": "AWS::StackName"
                        }
                    }
                ]
            }
        },
        "PodSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": {
                    "Fn::Join": [
                        "",
                        [
                            "PodSecurityGroup in ",
                            {
                                "Ref": "AWS::StackName"
                            }
                        ]
                    ]
                },
                "VpcId": {
                    "Ref": "0VpcId"
                },
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "-1",
                        "CidrIp": "10.0.0.0/8"
                    },
                    {
                        "IpProtocol": "-1",
                        "CidrIp": "192.168.0.0/16"
                    }
                ],
                "Tags": [
                    {
                        "Key": "Application",
                        "Value": {
                            "Ref": "AWS::StackName"
                        }
                    }
                ]
            }
        },
            "LB1SecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Condition": "CreateLB1",
            "Properties": {
                "GroupDescription": {
                    "Fn::Join": [
                        "",
                        [
                            "LB1 A00 Security Group in ",
                            {
                                "Ref": "AWS::StackName"
                            }
                        ]
                    ]
                },
                "VpcId": {
                    "Ref": "0VpcId"
                },
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "433",
                        "ToPort": "433",
                        "CidrIp": "10.0.0.0/8"
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "433",
                        "ToPort": "433",
                        "CidrIp": "192.168.0.0/16"
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "80",
                        "ToPort": "80",
                        "CidrIp": "10.0.0.0/8"
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "80",
                        "ToPort": "80",
                        "CidrIp": "192.168.0.0/16"
                    }
                ],
                "Tags": [
                    {
                        "Key": "Application",
                        "Value": {
                            "Ref": "AWS::StackName"
                        }
                    }
                ]
            }
        },
        "ElasticLoadBalancerA00": {
            "Type": "AWS::ElasticLoadBalancing::LoadBalancer",
            "Condition": "CreateLB1",
            "Properties": {
                "LoadBalancerName": {
                    "Fn::Join": [
                        "",
                        [
                            "LB1-A00-",
                            {
                                "Ref": "AWS::StackName"
                            }
                        ]
                    ]
                },
                "Scheme": "internal",
                "Subnets": [
                    {
                        "Ref": "EC2Subnet"
                    }
                ],
                "Listeners": [
                    {
                        "LoadBalancerPort": "443",
                        "InstancePort": 443,
                        "Protocol": "TCP"
                    }
                ],
                "HealthCheck": {
                    "Target": {
                        "Fn::Join": [
                            "",
                            [
                                "HTTP:",
                                443,
                                "/"
                            ]
                        ]
                    },
                    "HealthyThreshold": "3",
                    "UnhealthyThreshold": "5",
                    "Interval": "30",
                    "Timeout": "5"
                },
                "SecurityGroups": [
                    {
                        "Ref": "LB1SecurityGroup"
                    }
                ]
            }
        },
        "LB2SecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Condition": "CreateLB2",
            "Properties": {
                "GroupDescription": {
                    "Fn::Join": [
                        "",
                        [
                            "LB2 A01 Security Group in ",
                            {
                                "Ref": "AWS::StackName"
                            }
                        ]
                    ]
                },
                "VpcId": {
                    "Ref": "0VpcId"
                },
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "-1",
                        "CidrIp": {
                            "Fn::Join": [
                                "",
                                [
                                    "10.201.",
                                    {
                                        "Ref": "1SubnetNumber"
                                    },
                                    ".0/24"
                                ]
                            ]
                        }
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "433",
                        "ToPort": "433",
                        "CidrIp": "10.0.0.0/8"
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "433",
                        "ToPort": "433",
                        "CidrIp": "192.168.0.0/16"
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "80",
                        "ToPort": "80",
                        "CidrIp": "10.0.0.0/8"
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "80",
                        "ToPort": "80",
                        "CidrIp": "192.168.0.0/16"
                    }
                ],
                "Tags": [
                    {
                        "Key": "Application",
                        "Value": {
                            "Ref": "AWS::StackName"
                        }
                    }
                ]
            }
        },
        "ElasticLoadBalancerA01": {
            "Type": "AWS::ElasticLoadBalancing::LoadBalancer",
            "Condition": "CreateLB2",
            "Properties": {
                "LoadBalancerName": {
                    "Fn::Join": [
                        "",
                        [
                            "LB2-A01-",
                            {
                                "Ref": "AWS::StackName"
                            }
                        ]
                    ]
                },
                "Scheme": "internal",
                "Subnets": [
                    {
                        "Ref": "EC2Subnet"
                    }
                ],
                "Listeners": [
                    {
                        "LoadBalancerPort": "443",
                        "InstancePort": 443,
                        "Protocol": "TCP"
                    }
                ],
                "HealthCheck": {
                    "Target": {
                        "Fn::Join": [
                            "",
                            [
                                "HTTP:",
                                443,
                                "/"
                            ]
                        ]
                    },
                    "HealthyThreshold": "3",
                    "UnhealthyThreshold": "5",
                    "Interval": "30",
                    "Timeout": "5"
                },
                "SecurityGroups": [
                    {
                        "Ref": "LB2SecurityGroup"
                    }
                ]
            }
        },
        "LB3SecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Condition": "CreateLB3",
            "Properties": {
                "GroupDescription": {
                    "Fn::Join": [
                        "",
                        [
                            "LB3 B Security Group in ",
                            {
                                "Ref": "AWS::StackName"
                            }
                        ]
                    ]
                },
                "VpcId": {
                    "Ref": "0VpcId"
                },
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "-1",
                        "CidrIp": {
                            "Fn::Join": [
                                "",
                                [
                                    "10.201.",
                                    {
                                        "Ref": "1SubnetNumber"
                                    },
                                    ".0/24"
                                ]
                            ]
                        }
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "433",
                        "ToPort": "433",
                        "CidrIp": "10.0.0.0/8"
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "433",
                        "ToPort": "433",
                        "CidrIp": "192.168.0.0/16"
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "80",
                        "ToPort": "80",
                        "CidrIp": "10.0.0.0/8"
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "80",
                        "ToPort": "80",
                        "CidrIp": "192.168.0.0/16"
                    }
                ],
                "Tags": [
                    {
                        "Key": "Application",
                        "Value": {
                            "Ref": "AWS::StackName"
                        }
                    }
                ]
            }
        },
        "ElasticLoadBalancerB": {
            "Type": "AWS::ElasticLoadBalancing::LoadBalancer",
            "Condition": "CreateLB3",
            "Properties": {
                "LoadBalancerName": {
                    "Fn::Join": [
                        "",
                        [
                            "LB3-B-",
                            {
                                "Ref": "AWS::StackName"
                            }
                        ]
                    ]
                },
                "Scheme": "internal",
                "Subnets": [
                    {
                        "Ref": "EC2Subnet"
                    }
                ],
                "Listeners": [
                    {
                        "LoadBalancerPort": "443",
                        "InstancePort": 443,
                        "Protocol": "TCP"
                    }
                ],
                "HealthCheck": {
                    "Target": {
                        "Fn::Join": [
                            "",
                            [
                                "HTTP:",
                                443,
                                "/"
                            ]
                        ]
                    },
                    "HealthyThreshold": "3",
                    "UnhealthyThreshold": "5",
                    "Interval": "30",
                    "Timeout": "5"
                },
                "SecurityGroups": [
                    {
                        "Ref": "LB3SecurityGroup"
                    }
                ]
            }
        },
        "ServerA0": {
            "Type": "AWS::EC2::Instance",
            "Properties": {
                "AvailabilityZone": {
                    "Fn::Select": [
                        "0",
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                },
                "ImageId": "ami-2ae02342",
                "InstanceType": "m3.medium",
                "KeyName": "AgeroPod",
                "PrivateIpAddress": {
                    "Fn::Join": [
                        "",
                        [
                            "10.201.",
                            {
                                "Ref": "1SubnetNumber"
                            },
                            ".10"
                        ]
                    ]
                },
                "SecurityGroupIds": [
                    {
                        "Ref": "PodSecurityGroup"
                    }
                ],
                "SubnetId": {
                    "Ref": "EC2Subnet"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Join": [
                                "",
                                [
                                    {
                                        "Ref": "01Podname"
                                    },
                                    "-srv-A400.ccas-ccg.com"
                                ]
                            ]
                        }
                    }
                ],
                "UserData": "A400"
            }
        },
        "ServerA1": {
        "Type": "AWS::EC2::Instance",
            "Properties": {
                "AvailabilityZone": {
                    "Fn::Select": [
                        "0",
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                },
                "ImageId": "ami-2ae02342",
                "InstanceType": "m3.medium",
                "KeyName": "AgeroPod",
                "PrivateIpAddress": {
                    "Fn::Join": [
                        "",
                        [
                            "10.201.",
                            {
                                "Ref": "1SubnetNumber"
                            },
                            ".17"
                        ]
                    ]
                },
                "SecurityGroupIds": [
                    {
                        "Ref": "PodSecurityGroup"
                    }
                ],
                "SubnetId": {
                    "Ref": "EC2Subnet"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Join": [
                                "",
                                [
                                    {
                                        "Ref": "01Podname"
                                    },
                                    "-srv-A401.ccas-ccg.com"
                                ]
                            ]
                        }
            }
            ],
			
                "UserData": "A401"
            }
        },
        "ServerB": {
            "Type": "AWS::EC2::Instance",
            "Properties": {
                "AvailabilityZone": {
                    "Fn::Select": [
                        "0",
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                },
                "ImageId": "ami-2ae02342",
                "InstanceType": "m3.medium",
                "KeyName": "AgeroPod",
                "PrivateIpAddress": {
                    "Fn::Join": [
                        "",
                        [
                            "10.201.",
                            {
                                "Ref": "1SubnetNumber"
                            },
                            ".11"
                        ]
                    ]
                },
                "SecurityGroupIds": [
                    {
                        "Ref": "PodSecurityGroup"
                    }
                ],
                "SubnetId": {
                    "Ref": "EC2Subnet"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Join": [
                                "",
                                [
                                    {
                                        "Ref": "01Podname"
                                    },
                                    "-srv-B400.ccas-ccg.com"
                                ]
                            ]
                        }
                    }
                ],
                "UserData": "B400"
            }
        },
        "ServerC": {
            "Type": "AWS::EC2::Instance",
            "Properties": {
                "AvailabilityZone": {
                    "Fn::Select": [
                        "0",
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                },
                "ImageId": "ami-2ae02342",
                "InstanceType": "m3.medium",
                "KeyName": "AgeroPod",
                "PrivateIpAddress": {
                    "Fn::Join": [
                        "",
                        [
                            "10.201.",
                            {
                                "Ref": "1SubnetNumber"
                            },
                            ".12"
                        ]
                    ]
                },
                "SecurityGroupIds": [
                    {
                        "Ref": "PodSecurityGroup"
                    }
                ],
                "SubnetId": {
                    "Ref": "EC2Subnet"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Join": [
                                "",
                                [
                                    {
                                        "Ref": "01Podname"
                                    },
                                    "-srv-C400.ccas-ccg.com"
                                ]
                            ]
                        }
                    }
                ],
                "UserData": "C400"
            }
        },
        "ServerD": {
            "Type": "AWS::EC2::Instance",
            "Properties": {
                "AvailabilityZone": {
                    "Fn::Select": [
                        "0",
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                },
                "ImageId": "ami-b0e320d8",
                "InstanceType": "m3.medium",
                "KeyName": "AgeroPod",
                "PrivateIpAddress": {
                    "Fn::Join": [
                        "",
                        [
                            "10.201.",
                            {
                                "Ref": "1SubnetNumber"
                            },
                            ".13"
                        ]
                    ]
                },
                "SecurityGroupIds": [
                    {
                        "Ref": "PodSecurityGroup"
                    }
                ],
                "SubnetId": {
                    "Ref": "EC2Subnet"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Join": [
                                "",
                                [
                                    {
                                        "Ref": "01Podname"
                                    },
                                    "-srv-D400.ccas-ccg.com"
                                ]
                            ]
                        }
                    }
                ],
                "UserData": "D400"
            }
        },
        "ServerE": {
            "Type": "AWS::EC2::Instance",
            "Properties": {
                "AvailabilityZone": {
                    "Fn::Select": [
                        "0",
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                },
                "ImageId": "ami-5e24e936",
                "InstanceType": "m3.medium",
                "KeyName": "AgeroPod",
                "PrivateIpAddress": {
                    "Fn::Join": [
                        "",
                        [
                            "10.201.",
                            {
                                "Ref": "1SubnetNumber"
                            },
                            ".14"
                        ]
                    ]
                },
                "SecurityGroupIds": [
                    {
                        "Ref": "PodSecurityGroup"
                    }
                ],
                "SubnetId": {
                    "Ref": "EC2Subnet"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Join": [
                                "",
                                [
                                    {
                                        "Ref": "01Podname"
                                    },
                                    "-srv-E400.ccas-ccg.com"
                                ]
                            ]
                        }
                    }
                ],
                "UserData": "E400"
            }
        },
        "StateFarmRDS": {
            "Type": "AWS::RDS::DBInstance",
            "Properties": {
                "AllocatedStorage": "200",
                "DBInstanceClass": "db.m3.medium",
                "DBName": "cssdlc12",
                "DBInstanceIdentifier": {
                    "Fn::Join": [
                                "cssdlc12-",
                                [
                                    {
                                        "Ref": "01Podname"
                                    }
                                ]
                            ]
                    },
                "DBParameterGroupName": "cssdlc12",
                "DBSecurityGroups": [
                    {
                        "Ref": "DbSecurity2ByEC2SecurityGroup"
                    }
                ],
                "DBSubnetGroupName": {
                    "Ref": "RDSGroup1"
                },
                "Engine": "oracle-se1",
                "EngineVersion": "11.2.0.3.v1",
                "MasterUsername": "masteruser",
                "MasterUserPassword": "qwerasdfZXCV",
                "DBSnapshotIdentifier": "cssdlc12-091514",
                "AutoMinorVersionUpgrade": "FALSE"                
            }
        },
        "PODORARDS": {
            "Type": "AWS::RDS::DBInstance",
            "Properties": {
                "AllocatedStorage": "200",
                "DBInstanceClass": "db.m3.medium",
                "DBName": "orsdlc12",
                "DBInstanceIdentifier": {
                    "Fn::Join": [
                                "orsdlc12-",
                                [
                                    {
                                        "Ref": "01Podname"
                                    }
                                ]
                            ]
                    },
                "DBParameterGroupName": "orsdlc12",
                "DBSecurityGroups": [
                    {
                        "Ref": "DbSecurityByEC2SecurityGroup"
                    }
                ],
                "DBSubnetGroupName": {
                    "Ref": "RDSGroup2"
                },
                "Engine": "oracle-se1",
                "EngineVersion": "11.2.0.3.v1",
                "MasterUsername": "masteruser",
                "MasterUserPassword": "qwerasdfZXCV",
                "DBSnapshotIdentifier": "orsdlc12-091514",
                "AutoMinorVersionUpgrade": "FALSE"
            }
        }
    }
}
